--- a/clase15/package.json
+++ b/clase15/package.json
@@ -1,17 +1,19 @@
 {
   "name": "clase15",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "dev": "nodemon --watch server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
